[metadata]
# replace with your username:
name = cheesescript-pkg-MASTRIO
version = 0.0.1
author = MASTRIO
author_email = unavaliable
description = A Package used for the game JustAnotherGameAboutCheese
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MASTRIO/CheeseScript
project_urls =
    Bug Tracker = https://github.com/MASTRIO/CheeseScript/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6